testsuites/LLT/compiler/Diagnose/lex_test/lex_unexpected_digit/case6.expect.out
error: expected exponent part in hexadecimal float number '0x123.12e12'
  ==> case6.cj:14:20:
   | 
14 | var a = 0x123.12e12
   |         ~~~~~~~~~~~^ expected exponent part
   |         |
   |         because it is hexadecimal float number
   | 

1 error generated, 1 error printed.
